Minor changes, font color variable added

--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
                @%%%%%%%%%%%%%%%%%%               
                    @%%%%%%%%%%                   
                        @%%                                                  
+                       
+AUTHOR: MRJORDILICIOUS
+URL:    HTTPS://MRJORDILICIOUS.COM
+TWITCH: HTTPS://TWITCH.TV/MRJORDILICIOUS
+KOFI:   HTTPS://KO-FI.COM/MRJORDILICIOUS
+LINKS:  HTTPS://LINKS.MRJORDILICIOUS.COM
 -->                                                                                                                               
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="MrJordilicious">
   <title>Stream Stats Widget</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Passion+One">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div id="stat-widget">
+    <div id="stat-widget" style="color: #FFFFFF;">
         <div id="stat-header">HEADER</div>
         <div id="stat-value">VALUE</div>
       </div>
