--- a/Settings/index.html
+++ b/Settings/index.html
@@ -46,7 +46,7 @@ LINKS:  HTTPS://LINKS.MRJORDILICIOUS.COM
     <!-- LEFT: Config panel -->
     <div class="sidebar">
       <div class="header">
-        <img src="https://raw.githubusercontent.com/MrJordilicious/widgets.mrjordilicious.com/refs/heads/main/_resources/logo.png" height="50" alt="Logo" />
+        <img src="../../_resources/logo.png" height="50" alt="Logo" />
 
         <a href="https://ko-fi.com/mrjordilicious/shop" class="kofi-button" target="_blank">
             <img src="https://raw.githubusercontent.com/MrJordilicious/widgets.mrjordilicious.com/refs/heads/main/_resources/kofi_symbol.png" alt="Support me on Ko-fi" />
