Updates to all files

--- a/Settings/index.html
+++ b/Settings/index.html
@@ -39,14 +39,14 @@ LINKS:  HTTPS://LINKS.MRJORDILICIOUS.COM
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MrJordilicious Customizer</title>
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/MrJordilicious/widgets.mrjordilicious.com/refs/heads/main/_resources/logo.png">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
   <div class="layout">
     <!-- LEFT: Config panel -->
     <div class="sidebar">
       <div class="header">
-        <img src="../../_resources/logo.png" height="50" alt="Logo" />
+        <img src="https://raw.githubusercontent.com/MrJordilicious/widgets.mrjordilicious.com/refs/heads/main/_resources/logo.png" alt="Logo" />
 
         <a href="https://ko-fi.com/mrjordilicious/shop" class="kofi-button" target="_blank">
             <img src="https://raw.githubusercontent.com/MrJordilicious/widgets.mrjordilicious.com/refs/heads/main/_resources/kofi_symbol.png" alt="Support me on Ko-fi" />
