--- a/settings/index.html
+++ b/settings/index.html
@@ -46,7 +46,9 @@ LINKS:  HTTPS://LINKS.MRJORDILICIOUS.COM
     <!-- LEFT: Config panel -->
     <div class="sidebar">
       <div class="header">
-        <img src="https://raw.githubusercontent.com/MrJordilicious/widgets.mrjordilicious.com/refs/heads/main/_resources/logo.png" alt="Logo" />
+        <a href="https://links.mrjordilicious.com" target="blank">
+            <img src="https://raw.githubusercontent.com/MrJordilicious/widgets.mrjordilicious.com/refs/heads/main/_resources/logo.png" alt="Logo" />
+        </a>
 
         <a href="https://ko-fi.com/mrjordilicious/shop" class="kofi-button" target="_blank">
             <img src="https://raw.githubusercontent.com/MrJordilicious/widgets.mrjordilicious.com/refs/heads/main/_resources/kofi_symbol.png" alt="Support me on Ko-fi" />
