Updated settings pages

--- a/settings/index.html
+++ b/settings/index.html
@@ -69,10 +69,12 @@ LINKS:  HTTPS://LINKS.MRJORDILICIOUS.COM
         <input type="text" id="param2" placeholder="e.g. pink or E5007E" />
       </div>
 
+      <hr class="divider" />
+
       <label>Copy the URL below</label>
       <div id="result" class="url-display">https://widgets.mrjordilicious.com/Twitch-Stats-Rotator</div>
       <button id="copyBtn">Copy URL</button>
-      <span id="copyMsg">Copied!</span>
+      <span id="copyMsg">Copied to clipboard!</span>
     </div>
 
     <!-- RIGHT: Live preview panel -->
